plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'unq.desapp'
version = '0.0.1-SNAPSHOT'
description = 'Project for DesApp'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.13'
	implementation 'org.jsoup:jsoup:1.21.2'
	implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test:3.6.6'
    testImplementation 'org.wiremock:wiremock-standalone:3.13.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add '-parameters'
}

tasks.named('test') {
	useJUnitPlatform()
}

def coverageExcludes = [
	'unq/desapp/futbol/FutbolProjectApplication.class',
	'unq/desapp/futbol/security/SecurityConfig*.class',
	'unq/desapp/futbol/constants/**'
]

jacoco {
	toolVersion = "0.8.8"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
	}
	classDirectories.setFrom(sourceSets.main.output.asFileTree.matching {
		exclude coverageExcludes
	})
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.80
			}
		}
	}
	classDirectories.setFrom(sourceSets.main.output.asFileTree.matching {
		exclude coverageExcludes
	})
}
